--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "test": "nx test"
   },
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@arkweid/lefthook": "^0.7.7",
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-conventional": "^16.2.4",
     "@nrwl/cli": "14.1.5",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "14.1.5",
