--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,9 +1,14 @@
 pre-commit:
   parallel: true
   commands:
-    lint-commit-msg:
+    commit-msg:
       run: pnpm commitlint --edit
-    format:
-      run: pnpm exec nx affected --target=lint --parallel=3
-    test:
-      run: pnpm exec nx affected --target=test --parallel=3 --ci --code-coverage
+    nx-affected-format:
+      run: pnpm exec nx affected --target=format:write
+    nx-affected-lint:
+      run: pnpm exec nx affected --target=lint --fix
+    nx-spec:
+      run: pnpm exec nx affected --target=test --ci --code-coverage
+
+skip_output:
+  - meta
