--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@arkweid/lefthook": "^0.7.7",
     "@commitlint/cli": "^16.2.4",
     "@commitlint/config-conventional": "^16.2.4",
+    "@commitlint/config-nx-scopes": "^16.2.1",
     "@nrwl/cli": "14.1.5",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "14.1.5",
