--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,14 +1,16 @@
 pre-commit:
   piped: true
   commands:
-    nx-affected-format:
+    1_nx-affected-format:
       run: pnpm exec nx affected --target=format:write
-    nx-affected-lint:
+    2_nx-affected-lint:
       run: pnpm exec nx affected --target=lint --fix
-    nx-affected-spec:
+    3_nx-affected-spec:
       run: pnpm exec nx affected --target=test --ci --code-coverage
-    conv-commit-msg:
+    4_conv-commit-msg:
       run: pnpm commitlint --edit
 
 skip_output:
+  - summary
+  - success
   - meta
