chore: [nx migration] 14-2-0-add-json-schema

--- a/nx.json
+++ b/nx.json
@@ -35,5 +35,9 @@
         "projects": "dependencies"
       }
     ]
+  },
+  "workspaceLayout": {
+    "appsDir": "packages",
+    "libsDir": "packages"
   }
 }
