--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@commitlint/cli": "^16.2.4",
     "@commitlint/config-conventional": "^16.2.4",
     "@commitlint/config-nx-scopes": "^16.2.1",
-    "@nrwl/cli": "14.1.5",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/workspace": "14.1.5",
-    "nx": "14.1.5",
-    "prettier": "^2.5.1",
-    "typescript": "~4.6.2"
+    "@nrwl/cli": "14.2.4",
+    "@nrwl/nx-cloud": "14.0.8",
+    "@nrwl/workspace": "14.2.4",
+    "nx": "14.2.4",
+    "prettier": "2.6.2",
+    "typescript": "4.7.3"
   }
 }
+
